# quiz-client

./: README.md  pyproject.toml
.github/workflows/: code-quality.yml
src/quiz_client/: __init__.py  __main__.py
