[project]
name = "quiz-client"
version = "0.1.0"
description = "CLI for participating in the quiz game"
authors = [
    {name = "Martin Zeleny", email = "martin.zeleny@volny.cz"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "websockets>=10.0",
    "aioconsole>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.9",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "COM812",
    "T201",
]

[project.scripts]
quiz-client = "quiz_client.__main__:main"
